Clear the state of scroll and selection onmouseup

Clear the state of scroll and selection when
mouse is released regardless of what js has
done on mouseup including preventDefault.

BUG=686209

Review-Url: https://codereview.chromium.org/2871703003
Cr-Commit-Position: refs/heads/master@{#471883}