third_party/WebKit/Source/core/input/MouseEventManager.cpp
@@ -506,6 +506,13 @@ bool MouseEventManager::SlideFocusOnShadowHostIfNecessary(
   return false;
 }
 
+void MouseEventManager::HandleMouseReleaseEventUpdateStates() {
+  ClearDragHeuristicState();
+  InvalidateClick();
+  frame_->GetEventHandler().GetSelectionController().SetMouseDownMayStartSelect(
+      false);
+}
+
 void MouseEventManager::HandleMousePressEventUpdateStates(
     const WebMouseEvent& mouse_event) {
   CancelFakeMouseMoveEvent();
@@ -523,6 +530,9 @@ void MouseEventManager::HandleMousePressEventUpdateStates(
   } else {
     InvalidateClick();
   }
+
+  frame_->GetEventHandler().GetSelectionController().SetMouseDownMayStartSelect(
+      false);
 }
 
 bool MouseEventManager::IsMousePositionUnknown() {
